{
    "name": "BombermanIS",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "9318921a-0ef0-40ca-ab4c-d90219d52e70",
            "actions": [
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "1dac1f63-ddef-4a0d-9aae-50a2764223ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "ea8d45c2-b5a4-4b53-acee-7dd6c236c8a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveForward",
                    "type": "Button",
                    "id": "a913232a-51c8-4f25-9e85-63172f2d485f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveBack",
                    "type": "Button",
                    "id": "2fc947d6-ba56-49c6-b37b-9037bc3b1e0f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DropBomb",
                    "type": "Button",
                    "id": "c0a59342-b3b8-47d6-93d2-e93e9d03af72",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c020c679-d1af-4d96-97f3-66d492d47c8b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard1",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bade63b0-fd8b-4d3b-94ac-35c98e707067",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard1",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "012e033e-0922-439b-99cb-f443d4aba8fd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard1",
                    "action": "MoveBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7908bc7d-5569-4a13-a75d-62324b40a93d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard1",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "013fdfc6-5df8-416f-8238-1c48069287eb",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard1",
                    "action": "DropBomb",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard1",
            "bindingGroup": "Keyboard1",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard2",
            "bindingGroup": "Keyboard2",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Xbox controller",
            "bindingGroup": "Xbox controller",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}